# parsed_ffmpeg

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: publish-to-pypi.yml  quality-checks.yaml
examples/: example.py
parsed_ffmpeg/: parse_ffprobe.py  runner.py  types.py
parsed_ffmpeg_output/: __init__.py  ffmpeg.py
tests/: test_ffmpeg.py
tests/assets/: subtitle-stream.mkv
